HCC-453 configure gcp-haiilo provider with transferjob resource

--- a/examples/providerconfig/secret.yaml.tmpl
+++ b/examples/providerconfig/secret.yaml.tmpl
@@ -1,7 +1,8 @@
+# Not needed since we are handling this with terraform
 apiVersion: v1
 kind: Secret
 metadata:
-  name: example-creds
+  name: creds-provider-gcp-haiilo
   namespace: crossplane-system
 type: Opaque
 stringData:
